kubernetes/apps/template/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: template
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
